--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,142 @@
   <body>
     <div id="root"></div>
     <script type="module" src="main.js"></script>
+    <!-- imagen de titulo  -->
+    <div class="imagenTitle"></div>
+    <!-- botones de personajes, lugares y nosotras -->
+    <div class="actionButton">
+      <!-- boton de personajes-->
+      <button class="buttonP" id="chartersButton">PERSONAJES</button>
+      <!-- Modal de personajes  -->
+      <div id="modalChar" class="modal">
+        <!-- Modal content de personajes -->
+        <div class="modal-con" id="modal-con">
+          <span class="closeChar">&times;</span>
+          <div id="busqueda">
+          <input type="text" id="ya" value="">
+          <button id="searchButton" > buscar </button>
+          </div>
+          <div id="result"> </div>
+          <br>
+          
+        </div>
+      </div>
+      <!-- boton de lugares-->
+      <!--<button class="buttonP" id="placesButton">LUGARES</button>-->
+      <!-- Modal de lugares  -->
+      <!--<div id="modalPlace" class="modal">-->
+        <!-- Modal content de lugares -->
+        <!--<div class="modal-content">
+          <span class="closePlaces">&times;</span>
+        </div>
+      </div>-->
+      <!-- boton de nosotras-->
+      <button class="buttonP" id="usButton">NOSOTROS</button>
+      <!-- Modal de nosotras  -->
+      <div id="modalUs" class="modal">
+        <!-- Modal content de nosotras -->
+        <div class="modal-content">
+          <span class="closeUs">&times;</span>
+          <p>Nosotras</p>
+          <img id="rick" src="rick.jpg">
+        </div>
+      </div>
+    </div>
+    <br>
+    <section id="slider"></section>
+    <div class="slider">
+      <ul>
+        <li>
+          <img id="slider1" src= "https://i.ibb.co/89mCQYY/1.jpg" alt="">
+        </li>
+        <li>
+          <img id="slider2" src= "https://i.ibb.co/5FPfzNn/2.jpg" alt="">
+        </li>
+       <li>
+          <img id="slider3" src= "https://i.ibb.co/pffqfYJ/33.jpg" alt="">
+       </li>
+       <li>
+        <img id="slider4" src= "https://i.ibb.co/VHk6Ykp/44.jpg" alt="">
+       </li>
+     </ul>
+   </div>
+   </section>
+        <br>
+        
+    <div class="botonimagen">
+        <button class="botonimagenS" id="botonimagenS"></button>
+          <!-- Modal de personajes  -->
+          <div id="modalImgS" class="modal">
+            <!-- Modal content de personajes -->
+            <div class="modal-content">
+              <span class="closeS">&times;</span>
+              <h1 id="bSummer"></h1>
+              <img id="summer" src="Summer.jpg">
+              <p id="genderS"></p>
+              <p id="speciesS"></p>
+              <p id="statusS"></p>
+              <p id="originS"></p>
+            </div>
+          </div>
+        <button  class="botonimagenM" id="botonimagenM"></button>
+          <!-- Modal de personajes  -->
+          <div id="modalImgM" class="modal">
+            <!-- Modal content de personajes -->
+            <div class="modal-content">
+              <span class="closeM">&times;</span>
+              <h1 id="bMorty"></h1>
+              <img id="morty" src="morty.jpg">
+              <p id="genderM"></p>
+              <p id="speciesM"></p>
+              <p id="statusM"></p>
+              <p id="originM"></p>
+            </div>
+          </div>
+        <button  class="botonimagenR" id="botonimagenR"></button>
+          <!-- Modal de personajes  -->
+          <div id="modalImgR" class="modal">
+            <!-- Modal content de personajes -->
+            <div class="modal-content">
+              <span class="closeR">&times;</span>
+              <h1 id="bRick"></h1>
+              <img id="rick" src="rick.jpg">
+              <p id="genderR"></p>
+              <p id="speciesR"></p>
+              <p id="statusR"></p>
+              <p id="originR"></p>
+            </div>
+          </div>
+        <button  class="botonimagenB" id="botonimagenB"></button>
+        <!-- Modal de personajes  -->
+        <div id="modalImgB" class="modal">
+          <!-- Modal content de personajes -->
+          <div class="modal-content">
+            <span class="closeB">&times;</span>
+            <h1 id="bBeth"></h1>
+            <img id="beth" src="beth.jpg">
+            <p id="genderB"></p>
+            <p id="speciesB"></p>
+            <p id="statusB"></p>
+            <p id="originB"></p>
+          </div>
+        </div>
+        <button  class="botonimagenJ" id="botonimagenJ"></button>
+          <!-- Modal de personajes  -->
+          <div id="modalImgJ" class="modal">
+            <!-- Modal content de personajes -->
+            <div class="modal-content">
+              <span class="closeJ">&times;</span>
+              <h1 id="bJerry"></h1>
+              <img id="jerry" src="jerry.jpg">
+              <p id="genderJ"></p>
+              <p id="speciesJ"></p>
+              <p id="statusJ"></p>
+              <p id="originJ"></p>
+            </div>
+          </div>
+    </div>   
+    </div>
+   
   </body>
 </html>
+
